// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTransactions has the expected html structure 1`] = `
<div
  class="tm-page"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <div
          class="tm-page-header-title"
        >
          <h2>
            Transactions
          </h2>
        </div>
        <div
          class="tm-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div>
          <div>
            <div
              class="tm-tool-bar"
            >
              <div
                class="tm-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a>
                    <i
                      class="material-icons"
                    >
                      refresh
                    </i>
                  </a>
                  <a>
                    <i
                      class="material-icons"
                    >
                      search
                    </i>
                  </a>
                  <a
                    class="back"
                    disabled="disabled"
                  >
                    <i
                      class="material-icons"
                    >
                      arrow_back
                    </i>
                  </a>
                  <a
                    class="help"
                  >
                    <i
                      class="material-icons"
                    >
                      help_outline
                    </i>
                  </a>
                  <a
                    id="signOut-btn"
                  >
                    <i
                      class="material-icons"
                    >
                      exit_to_app
                    </i>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main ps"
  >
    <!---->
    <div
      class="tm-li-tx"
    >
      <div
        class="tm-li-tx__icon"
      >
        <img
          src="../../assets/cosmos-logo.png"
        />
      </div>
      <div
        class="tm-li-tx__content"
      >
        <p
          class="tm-li-tx__content__caption"
        >
          <span>
            Unknown Transaction Type
          </span>
        </p>
        <div
          class="tm-li-tx__content__information"
        >
          <div
            class="tm-li-tx__content__information__details"
          />
          <div
            class="tm-li-tx__content__information__block"
          >
            <a
              href="https://explorecosmos.network/blocks/3438"
            >
              Block #3438 
            </a>
            @ 1:00 am
          </div>
        </div>
      </div>
    </div>
    <div
      class="tm-li-tx"
    >
      <div
        class="tm-li-tx__icon"
      >
        <img
          src="../../assets/cosmos-logo.png"
        />
      </div>
      <div
        class="tm-li-tx__content"
      >
        <p
          class="tm-li-tx__content__caption"
        >
          <span>
            Unknown Transaction Type
          </span>
        </p>
        <div
          class="tm-li-tx__content__information"
        >
          <div
            class="tm-li-tx__content__information__details"
          />
          <div
            class="tm-li-tx__content__information__block"
          >
            <a
              href="https://explorecosmos.network/blocks/3436"
            >
              Block #3436 
            </a>
            @ 1:00 am
          </div>
        </div>
      </div>
    </div>
    <div
      class="tm-li-tx"
    >
      <div
        class="tm-li-tx__icon"
      >
        <img
          src="../../assets/cosmos-logo.png"
        />
      </div>
      <div
        class="tm-li-tx__content"
      >
        <p
          class="tm-li-tx__content__caption"
        >
          <span>
            Unknown Transaction Type
          </span>
        </p>
        <div
          class="tm-li-tx__content__information"
        >
          <div
            class="tm-li-tx__content__information__details"
          />
          <div
            class="tm-li-tx__content__information__block"
          >
            <a
              href="https://explorecosmos.network/blocks/466"
            >
              Block #466 
            </a>
            @ 1:00 am
          </div>
        </div>
      </div>
    </div>
    <div
      class="tm-li-tx"
    >
      <div
        class="tm-li-tx__icon"
      >
        <img
          src="../../assets/cosmos-logo.png"
        />
      </div>
      <div
        class="tm-li-tx__content"
      >
        <p
          class="tm-li-tx__content__caption"
        >
          <span>
            Unknown Transaction Type
          </span>
        </p>
        <div
          class="tm-li-tx__content__information"
        >
          <div
            class="tm-li-tx__content__information__details"
          />
          <div
            class="tm-li-tx__content__information__block"
          >
            <a
              href="https://explorecosmos.network/blocks/170"
            >
              Block #170 
            </a>
            @ 1:00 am
          </div>
        </div>
      </div>
    </div>
    <div
      class="tm-li-tx"
    >
      <div
        class="tm-li-tx__icon"
      >
        <img
          src="../../assets/cosmos-logo.png"
          style="border-color: #512584;"
        />
      </div>
      <div
        class="tm-li-tx__content"
      >
        <p
          class="tm-li-tx__content__caption"
        >
          <div>
            Delegated 
            <b>
              24
            </b>
            <span>
               steak
            </span>
          </div>
        </p>
        <div
          class="tm-li-tx__content__information"
        >
          <div
            class="tm-li-tx__content__information__details"
          >
            <div>
              To 
              <a
                href="https://explorecosmos.network/validators/cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw"
              >
                cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw
              </a>
            </div>
          </div>
          <div
            class="tm-li-tx__content__information__block"
          >
            <a
              href="https://explorecosmos.network/blocks/160"
            >
              Block #160 
            </a>
            @ 1:00 am
          </div>
        </div>
      </div>
    </div>
    <div
      class="ps__rail-x"
      style="left: 0px; top: 0px;"
    >
      <div
        class="ps__thumb-x"
        style="left: 0px; width: 0px;"
        tabindex="0"
      />
    </div>
    <div
      class="ps__rail-y"
      style="top: 0px; left: 0px;"
    >
      <div
        class="ps__thumb-y"
        style="top: 0px; height: 0px;"
        tabindex="0"
      />
    </div>
  </main>
</div>
`;

exports[`PageTransactions should filter the transactions 1`] = `
<div
  class="tm-page"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <div
          class="tm-page-header-title"
        >
          <h2>
            Transactions
          </h2>
        </div>
        <div
          class="tm-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div>
          <div>
            <div
              class="tm-tool-bar"
            >
              <div
                class="tm-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a>
                    <i
                      class="material-icons"
                    >
                      refresh
                    </i>
                  </a>
                  <a>
                    <i
                      class="material-icons"
                    >
                      search
                    </i>
                  </a>
                  <a
                    class="back"
                    disabled="disabled"
                  >
                    <i
                      class="material-icons"
                    >
                      arrow_back
                    </i>
                  </a>
                  <a
                    class="help"
                  >
                    <i
                      class="material-icons"
                    >
                      help_outline
                    </i>
                  </a>
                  <a
                    id="signOut-btn"
                  >
                    <i
                      class="material-icons"
                    >
                      exit_to_app
                    </i>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main"
  >
    <div
      class="tm-modal-search"
    >
      <div
        class="tm-modal-search-container"
      >
        <div
          class="tm-form-group"
        >
          <!---->
          <!---->
          <div
            class="tm-form-group__field"
          >
            <div
              class="tm-modal-search-field"
            >
              <input
                class="mousetrap tm-field"
                id="search-input"
                placeholder="Search..."
                type="text"
              />
              <button
                class="tm-btn"
              >
                <span
                  class="tm-btn__container"
                >
                  <i
                    aria-hidden="true"
                    class="tm-btn__icon material-icons"
                  >
                    close
                  </i>
                  <!---->
                  <!---->
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="tm-li-tx"
    >
      <div
        class="tm-li-tx__icon"
      >
        <img
          src="../../assets/cosmos-logo.png"
        />
      </div>
      <div
        class="tm-li-tx__content"
      >
        <p
          class="tm-li-tx__content__caption"
        >
          <span>
            Unknown Transaction Type
          </span>
        </p>
        <div
          class="tm-li-tx__content__information"
        >
          <div
            class="tm-li-tx__content__information__details"
          />
          <div
            class="tm-li-tx__content__information__block"
          >
            <a
              href="https://explorecosmos.network/blocks/466"
            >
              Block #466 
            </a>
            @ 1:00 am
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;
